--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,26 +1,20 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "backend/server.js",
-        "use": "@vercel/node",
-        "config": {
-          "includeFiles": [
-            "backend/config/**",
-            "backend/controllers/**",
-            "backend/middleware/**",
-            "backend/models/**",
-            "backend/routes/**",
-            ".env"
-          ]
+        {
+            "src": "server.js",
+            "use": "@vercel/node",
+            "config": {
+                "includeFiles": [
+                    "dist/**"
+                ]
+            }
         }
-      }
     ],
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "api/server.js"
-      }
+        {
+            "src": "/(.*)",
+            "dest": "server.js"
+        }
     ]
-  }
-  
+}
