--- a/backend/.env
+++ b/backend/.env
@@ -4,5 +4,6 @@ CLOUDINARY_SECRET_KEY = "REMOVED_SECRET"
 CLOUDINARY_NAME = "dlfkd7gjr"
 JWT_SECRET = "REMOVED_SECRET"
 ADMIN_EMAIL= "REMOVED_SECRET"
-FRONTEND_URL = "uniform-xpress-frontend.vercel.app"
+FRONTEND_URL = "https//uniform-xpress-frontend.vercel.app"
+ADMIN_URL = "https//uniform-xpress-admin.vercel.app"
 ADMIN_PASSWORD = "REMOVED_SECRET"
