--- a/backend/.env
+++ b/backend/.env
@@ -5,5 +5,5 @@ CLOUDINARY_NAME = "dlfkd7gjr"
 JWT_SECRET = "REMOVED_SECRET"
 ADMIN_EMAIL= "REMOVED_SECRET"
 FRONTEND_URL = "https//uniform-xpress-frontend.vercel.app"
-ADMIN_URL = "https//uniform-xpress-admin.vercel.app"
+ADMIN_URL = "huniform-xpress-jch4.vercel.app"
 ADMIN_PASSWORD = "REMOVED_SECRET"
