--- a/admin/package.json
+++ b/admin/package.json
@@ -13,6 +13,9 @@
     "axios": "^1.8.4",
     "dom": "^0.0.3",
     "html5-qrcode": "^2.3.8",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
+    "node-cron": "^3.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
