--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,6 @@
   "author": "",
   "type": "module",
   "main": "server.js",
-  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
@@ -19,8 +18,10 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
     "mongoose": "^8.13.0",
     "multer": "^1.4.5-lts.2",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.9",
     "validator": "^13.15.0"
   }
