--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.488.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
