added real time updates for the admin, and also integrated the paymongo testeing environment for gcash

--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,21 @@
+# MongoDB connection string
 MONGODB_URL = 'REMOVED_SECRET'
+
+# Cloudinary configuration
 CLOUDINARY_API_KEY = "156566253739499"
 CLOUDINARY_SECRET_KEY = "REMOVED_SECRET"
 CLOUDINARY_NAME = "dlfkd7gjr"
+
+# JWT secret key for authentication
 JWT_SECRET = "REMOVED_SECRET"
-ADMIN_EMAIL= "REMOVED_SECRET"
+
+# Admin credentials for the application
+ADMIN_EMAIL = "REMOVED_SECRET"
+ADMIN_PASSWORD = "REMOVED_SECRET"
+
+# PayMongo API secret key for payment processing
+PAYMONGO_SECRET_KEY = "REMOVED_SECRET"
+
+# Frontend and Admin URLs
 FRONTEND_URL = "https//uniform-xpress-frontend.vercel.app"
 ADMIN_URL = "https//uniform-xpress-jch4.vercel.app"
-ADMIN_PASSWORD = "REMOVED_SECRET"
