--- a/admin/package.json
+++ b/admin/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^7.4.0",
     "react-toastify": "^11.0.5",
     "router": "^2.1.0",
+    "socket.io-client": "^4.8.1",
     "tostify": "^0.0.1"
   },
   "devDependencies": {
