--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "server": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
@@ -23,6 +24,7 @@
     "multer": "^1.4.5-lts.2",
     "node-cron": "^3.0.3",
     "nodemon": "^3.1.9",
+    "socket.io": "^4.8.1",
     "validator": "^13.15.0"
   }
 }
